test/attribute/fail/ref_self_argument.rs
struct Something;

impl Something {
    #[proc::attribute]
    fn test(&self) -> proc::TokenStream {
        todo!()
    }
}

fn main() {}
