test/attribute/fail/ref_self_argument.stderr
error: The attribute function should be free standing
 --> test/attribute/fail/ref_self_argument.rs:5:5
  |
5 |     fn test(&self) -> proc::TokenStream {
  |     ^^
